added the new layers
